fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,11 @@
     color: #fff;
   }
 
+
+@media only screen and (max-width: 600px) {
   html,
 body{
 width:100%;
 overflow-x:hidden;
-}
+}  
+} 
